changes made to CSS

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     </header>
 
-    <img class="Main-image"/>
+    <img class="hero"/>
 
     <main>
         <section id="About-Me" class="About-Me" class="card">
@@ -100,7 +100,7 @@
             </div>
         </section>
         <section id="Contact-Me" class="Contact-Me" class="card">
-            <h3>Contact Me</h3>
+            <h2>Contact Me</h2>
             <ul>
                 <li>+1774-448-8311</li>
                 <li id="email"><strong>Email:</strong> <a href="#">dhiduchick@gmail.com</a>
