responsive design added to css

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <a href="#Work">My Work</a>
                 </li>
                 <li>
-                    <a href="#COntact-Me">Contact Me</a>
+                    <a href="#Contact-Me">Contact Me</a>
                 </li>
                 
             </ul>
@@ -41,12 +41,12 @@
 
         <section id="Work" class="Work" class="card">
             <h2>Work</h2>
-            <div class="container" id="project-grid">
+            <section class="container" id="project-grid">
                 <a 
                 target="blank" 
                 href="https://dhiduchick.github.io/prework-study-guide/">
             <p>Prework Study Guide</p>
-            <img src="./Assets/Images/Screenshot 2023-10-11 at 5.49.36 PM.png" alt="Screenshot 
+            <img src="./Assets/Images/prework-study-guide-ss.png" alt="Screenshot 
             of Prework Study Guide displaying things learned about HTML,CSS,and GIT.">
                 </a>
                 <a
@@ -97,13 +97,13 @@
             <p>Project 3</p>
             <img src="./Assets/Images/placeholder-image-green.png" alt="Placeholder Image">
             </a>        
-            </div>
+            </section>
         </section>
         <section id="Contact-Me" class="Contact-Me" class="card">
             <h2>Contact Me</h2>
             <ul>
                 <li>+1774-448-8311</li>
-                <li id="email"><strong>Email:</strong> <a href="#">dhiduchick@gmail.com</a>
+                <li id="email"><strong>Email:</strong> <a href="mailto:dhiduchick@gmail.com">dhiduchick@gmail.com</a>
                 </li>
                 <li>
                     <a target="blank" href="https://github.com/dhiduchick">Github</a>
